# neoversity

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
tests/tier1/assistant/: test_assistant_bot.py  test_models.py
tests/tier1/hw03/: test_birthday_manager.py  test_day_calculator.py  test_phone_normalizer.py  test_ticket_number_generator.py
tests/tier1/hw04/: assistant_bot_tests.py  test_cat_info_reader.py  test_folder_list.py  test_salary_calculator.py
tests/tier1/hw05/: test_fibonacci.py  test_log_analyzer.py  test_profit_parser.py
tests/tier2/hw01/: test_deposits.py  test_ellipsoid.py  test_iphones.py  test_polynom.py  test_porabola.py
tests/tier2/hw02/: test_analyze_birth_rates.py
tier1/assistant/: assistant_bot.py  models.py
tier1/hw03/: birthday_manager.py  day_calculator.py  phone_normalizer.py  ticket_number_generator.py
tier1/hw04/: assistant_bot.py  cat_info_reader.py  folder_list.py  salary_calculator.py
tier1/hw05/: fibonacci.py  log_analyzer.py  profit_parser.py
tier2/hw01/: deposits.py  ellipsoid.py  iphones.py  polynom.py  porabola.py
tier2/hw02/: analyze_birth_rates.py
tier2/hw03/: matplotlib.py  sierpinsky.py
tier2/hw04/: regression.py
tier2/hw05/: plague.py  river_bank_fence.py  speed_analysis.py
