[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tier1", "tier2"]

[project]
name = "neoversity"
version = "0.1.0"
authors = [
    { name = "John Doe", email = "john@doe.com" },
]
description = "Master of Science: Artificial Intelligence and Machine Learning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "colorama",
    "numpy",
    "matplotlib",
    "seaborn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
    "pandas-stubs",
    "types-colorama",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]